added repository link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             <li class="nav-item">
               <a class="nav-link" id="toggleEditor" href="#">Toggle Editor</a>
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
+                href="https://github.com/matteobruni/fill100"
+                >GitHub</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -102,21 +110,21 @@
     </div>
 
     <div class="modal fade" id="wonModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content rounded-6 shadow bg-dark">
-            <div class="modal-body p-5">
-              You Won!
-              <button
-                type="button"
-                class="btn btn-lg btn-primary mt-5 w-100"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-            </div>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-6 shadow bg-dark">
+          <div class="modal-body p-5">
+            You Won!
+            <button
+              type="button"
+              class="btn btn-lg btn-primary mt-5 w-100"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
           </div>
         </div>
       </div>
+    </div>
 
     <div id="game-container">
       <span id="game"> </span>
