added comments to the javascript, it's easier to understand how it works

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       </div>
     </nav>
     <span id="tsparticles"></span>
+    <span id="confetti"></span>
     <div class="modal fade" id="rulesModal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content rounded-6 shadow bg-dark">
